Implemented error handling in jersey client
#14